test/caffeine_lang/corpus/frontend/parser/errors/missing_blueprint_name.caffeine
Blueprints for "SLO"
  * :
    Requires { env: String }
    Provides { value: "x" }
